--- a/app/views/customers/circles/edit.html.erb
+++ b/app/views/customers/circles/edit.html.erb
@@ -4,5 +4,10 @@
   <%= f.text_field :circle_name, autofocus: true, placeholder:"サークル名"%>
   <h4>サークル紹介</h4>
   <%= f.text_area :explanation, autofocus: true, placeholder:"サークル紹介"%>
+  <h4>活動場所選択</h4>
+  <%= f.collection_select :place, JpPrefecture::Prefecture.all, :code, :name, { prompt: '選択してください' }, class: 'form-control' %>
+  <h4>ジャンル選択</h4>
+  <%= f.label :genre_name, "ジャンル", class: "control-label" %>
+  <%= f.collection_select :genre_id, Genre.all, :id, :genre_name, { prompt: "--選択してください--" }, class: "form-control" %>
   <%= f.submit "変更を保存" %>
 <% end %>
