--- a/app/views/customers/circles/new.html.erb
+++ b/app/views/customers/circles/new.html.erb
@@ -10,6 +10,6 @@
   <%= f.collection_select :place, JpPrefecture::Prefecture.all, :code, :name, { prompt: '選択してください' }, class: 'form-control' %>
   <h4>ジャンル選択</h4>
   <%= f.label :genre_name, "ジャンル", class: "control-label" %>
-  <%= f.collection_select :genre_name, Genre.all, :id, :genre_name, { prompt: "--選択してください--" }, class: "form-control" %>
+  <%= f.collection_select :genre_id, Genre.all, :id, :genre_name, { prompt: "--選択してください--" }, class: "form-control" %>
   <%= f.submit '投稿' %>
 <% end %>
