--- a/app/views/customers/circles/show.html.erb
+++ b/app/views/customers/circles/show.html.erb
@@ -4,8 +4,10 @@
   <p>サークル名：<%= @circle.circle_name %></p>
   <p>サークル説明：<%= @circle.explanation %></p>
   <p>ユーザーネーム：<%= @circle.customer.name %></p>
-  <p>活動場所：<%= @circle.place %></p>
+  <p>活動場所：<%= @p.name %></p>
   <p>ジャンル:<%= @circle.genre.genre_name %></p>
   <p><%= link_to "このサークルを編集する", edit_customer_circle_path %></p>
+  <p><%= link_to "このサークルのイベントを追加する", new_customer_circle_ivent_path(@circle.customer_id,@circle.id) %></p>
+  <p><%= link_to "このサークルのイベント一覧", customer_circle_ivents_path(@circle.customer_id,@circle.id) %></p>
   <p><%=link_to "このサークルを削除する", customer_circle_path, method: :delete %></p>
 </div>
