--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,9 @@
      <li>
       <%= link_to 'マイページ編集', customer_my_page_edit_path(current_customer.id) %>
      </li>
+     <li>
+      <%= link_to 'マイサークル一覧', customer_circles_path(current_customer.id) %>
+     </li>
     <% elsif admin_signed_in? %>
      <li>
       <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
