マイグレーションファイル整理

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,6 +45,10 @@
      </li>
     <% end %>
     <li>
+     <%= render 'layouts/search_pref' %>
+    </li>
+    <%=session[:pref]%>
+    <li>
      <%= render 'layouts/search' %>
     </li>
     <%= yield %>
