--- a/app/views/customers/events/edit.html.erb
+++ b/app/views/customers/events/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>イベントを修正する</h1>
-<%= form_with model: @ivent, url: customer_circle_ivent_path, local:true do |f| %>
+<%= form_with model: @event, url: customer_circle_event_path, local:true do |f| %>
   <h4>画像</h4>
   <%#= f.attachment_field :image %>
   <h4>イベント名</h4>
