--- a/app/views/customers/circles/index.html.erb
+++ b/app/views/customers/circles/index.html.erb
@@ -1,5 +1,5 @@
 <h1>マイサークル一覧</h1>
- <% @circles.each do |circle| %>
+ <% @mycircles.each do |circle| %>
   <% if circle.customer_id === current_customer.id %>
    <div>
     <%#= attachment_image_tag post_image, :image %>
@@ -7,6 +7,8 @@
     <p>サークル名：<%= link_to circle.circle_name, customer_circle_path(circle.customer_id, circle.id) %></p>
     <p>説明：<%= circle.explanation %></p>
     <p>ユーザーネーム：<%= circle.customer.name %></p>
+    <% pref=JpPrefecture::Prefecture.find(circle.place.to_i).name%>
+    <p>活動場所: <%= pref%></p>
     <h3>--------------------------------------</h3>
    </div>
   <% end %>
