--- a/app/views/customers/circles/new.html.erb
+++ b/app/views/customers/circles/new.html.erb
@@ -7,10 +7,10 @@
   <h4>説明</h4>
   <%= f.text_area :explanation %>
   <h4>活動場所選択</h4>
-  <%= f.collection_select :place, JpPrefecture::Prefecture.all, :code, :name, { prompt: '選択してください' }, class: 'form-control' %>
+  <%= f.collection_select :place, JpPrefecture::Prefecture.all, :code, :name, { prompt: '選択してください' }, class: "selectpicker" %>
   <h4>ジャンル選択</h4>
   <%= f.label :genre_name, "ジャンル", class: "control-label" %>
-  <%= f.collection_select :genre_id, Genre.all, :id, :genre_name, { prompt: "--選択してください--" }, class: "form-control" %>
+  <%= f.collection_select :genre_id, Genre.all, :id, :genre_name, { prompt: "--選択してください--" }, class: "selectpicker" %>
   <%= f.submit '投稿' %>
 <% end %>
 
