--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -3,5 +3,5 @@
   <%= render 'customers/circles/index', circles: @records %>
 <% elsif @model == 'ivent' %>
     <h3> イベントの検索結果 "<%= @content %>"</h3>
-  <%= render 'customers/ivents/index', ivents: @records %>
+  <%= render 'customers/events/index', events: @records %>
 <% end %>
