--- a/app/views/customers/events/show.html.erb
+++ b/app/views/customers/events/show.html.erb
@@ -1,22 +1,61 @@
-<h1>イベント詳細</h1>
-<div class="post-body">
-  <%#= attachment_image_tag @post_image, :image %>
-  <p>イベント名：<%= @event.title %></p>
-  <p>サークル説明：<%= @event.body %></p>
-  <p>サークル名：<%= @event.circle.circle_name %></p>
-   <% if @event.favorited_by?(current_customer.id) %>
-    <p>
-      <%= link_to customers_favorite_event_path(@event), method: :delete do %>
-        ♥<%#= @circle.favorites.count %> いいねdelete
-      <% end %>
-    </p>
-    <% else %>
-    <p>
-      <%= link_to customers_favorite_events_path(event_id: @event.id), method: :post do %>
-        ♡<%#= @circle.favorites.count %> いいねcreate
-      <% end %>
-    </p>
-  <% end %>
-  <p><%= link_to "このイベントを編集する", edit_customer_circle_event_path %></p>
-  <p><%=link_to "このイベントを削除する", customer_circle_event_path, method: :delete %></p>
+<div class="row">
+<div class="col-lg-12">
+<div class="card shadow">
+   <div class="card-body text-center">
+      <h1>Details</h1>
+      　 <hr class="my-4">
+          <%= attachment_image_tag @event, :image, format: 'jpeg', size: "700x400", fallback: "no_image.png" %>
+      　   <hr class="my-4">
+          <h5>イベント名：<%= @event.title %></h5>
+          <hr class="my-4">
+          <p>イベント内容：<%= @event.body %></p>
+          <hr class="my-4">
+          <p>作成者：<%= @event.customer.name %></p>
+          <hr class="my-4">
+          <% pref=JpPrefecture::Prefecture.find(@event.place.to_i).name%>
+          <p>活動場所⇨<%= pref%>　　ジャンル⇨<%= @event.genre.genre_name %></p>
+          <hr class="my-4">
+          <p>サークル名：<%= @event.circle.circle_name %></p>
+           <% if @event.favorited_by?(current_customer.id) %>
+          <hr class="my-4">
+            <p>
+              <%= link_to customers_favorite_event_path(@event), method: :delete do %>
+               ♥Favorite
+              <% end %>
+            </p>
+            <% else %>
+            <p>
+              <%= link_to customers_favorite_events_path(event_id: @event.id), method: :post do %>
+                 ♡Favorite
+              <% end %>
+            </p>
+          <% end %>
+    <div class="card-footer">
+     <ul class="nav">
+       <% if current_customer.id == @event.customer_id %>
+       <li class="nav-item">
+        <%= link_to "このイベントを編集する", edit_customer_circle_event_path, class: "btn btn-secondary" %>
+       </li>
+       <li class="nav-item">
+         <%=link_to "このイベントを削除する", customer_circle_event_path, method: :delete, class: "btn btn-secondary" %>
+       </li>
+       <% end %>
+     </ul>
+    </div>
 </div>
+</div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
