--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,13 +1,17 @@
-<h1>Gathers</h1>
+<div class="row">
+  <%= image_tag "gathers.jpg", class:'top_image' %>
+</div>
 
+<div class="row">
 
+  <div class="col-md-12 text-center">
+     <div class="about">
+      <h2>ABOUT</h2>
+      <p>スポーツを通して人との繋がりを作りたい。</p>
+      <p>なにかスポーツをしてみたいが、どこでなにをすれば良いのかわからない。</p>
+      <p>そんな人達の悩みを気軽に、簡単に解決するSNSです。</p>
+     </div>
+  </div>
 
+</div>
 
-
-<button type="button" class="btn btn-primary">Primary</button>
-<button type="button" class="btn btn-secondary">Secondary</button>
-<button type="button" class="btn btn-success">Success</button>
-<button type="button" class="btn btn-info">Info</button>
-<button type="button" class="btn btn-warning">Warning</button>
-<button type="button" class="btn btn-danger">Danger</button>
-<button type="button" class="btn btn-link">Link</button>
