--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the homes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.top_image {
+	position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 500px;
+}
+
+//aboutスペース------------------------------
+.about{
+	width: 100%;
+	margin: 0 auto;
+	padding: 80px,80px;
+}
