--- a/app/views/customers/circles/_index.html.erb
+++ b/app/views/customers/circles/_index.html.erb
@@ -1,13 +1,19 @@
-
- <% circles.each do |circle| %>
-   <div>
-    <%#= attachment_image_tag post_image, :image %>
-    <p>投稿ユーザー画像：</p>
-    <p>サークル名：<%= link_to circle.circle_name, customer_circle_path(circle.customer_id, circle.id) %></p>
-    <p>説明：<%= circle.explanation %></p>
-    <p>ユーザーネーム：<%= circle.customer.name %></p>
-    <% pref=JpPrefecture::Prefecture.find(circle.place.to_i).name%>
-    <p>活動場所: <%= pref%></p>
-    <h3>--------------------------------------</h3>
-   </div>
-  <% end %>
+<div class="box">
+  <div class="container">
+   	<div class="row">
+       <% circles.each do |circle| %>
+      	 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+          <div class="box-part text-center">
+            <%= link_to (attachment_image_tag circle, :image, format: 'jpeg', size: "300x200", fallback: "no_image.png"),customer_circle_path(circle.customer_id, circle.id) %>
+            <p>サークル名：<%= link_to circle.circle_name, customer_circle_path(circle.customer_id, circle.id) %></p>
+            <p>説明：<%= circle.explanation %></p>
+            <p>ユーザーネーム：<%= circle.customer.name %></p>
+            <% pref=JpPrefecture::Prefecture.find(circle.place.to_i).name%>
+            <p>活動場所: <%= pref%></p>
+            <p>ジャンル:<%= circle.genre.genre_name %></p>
+          </div>
+         </div>
+        <% end %>
+	　</div>
+  </div>
+ </div>
