--- a/app/views/customers/customers/edit.html.erb
+++ b/app/views/customers/customers/edit.html.erb
@@ -1,8 +1,9 @@
-<h1>プロフィール編集</h1>
-<%= form_with model: @customer, local:true do |f| %>
-  <h4>Name</h4>
-  <%= f.text_field :name, autofocus: true, placeholder:"名前"%>
-  <h4>自己紹介</h4>
-  <%= f.text_area :body, autofocus: true, placeholder:"自己紹介"%>
-  <%= f.submit "変更を保存" %>
-<% end %>
+<div class="row">
+<div class="col-lg-12">
+<div class="card shadow">
+   <div class="card-body text-center">
+      <h1>プロフィール編集</h1>
+      <%= render 'customers/customers/form', customer: @customer %>
+</div>
+</div>
+</div>
