--- a/app/views/customers/events/edit.html.erb
+++ b/app/views/customers/events/edit.html.erb
@@ -1,10 +1,9 @@
-<h1>イベントを修正する</h1>
-<%= form_with model: @event, url: customer_circle_event_path, local:true do |f| %>
-  <h4>画像</h4>
-  <%#= f.attachment_field :image %>
-  <h4>イベント名</h4>
-  <%= f.text_field :title %>
-  <h4>イベント内容</h4>
-  <%= f.text_area :body %>
-  <%= f.submit '投稿' %>
-<% end %>
+<div class="row">
+<div class="col-lg-12">
+<div class="card shadow">
+   <div class="card-body text-center">
+      <h1>イベントを編集する</h1>
+      <%= render 'customers/events/form', event: @event %>
+</div>
+</div>
+</div>
