--- a/app/views/customers/events/new.html.erb
+++ b/app/views/customers/events/new.html.erb
@@ -1,12 +1,31 @@
-<h1>イベントを投稿する</h1>
-<%= form_with model: @event, url: customer_circle_events_path, local:true do |f| %>
-  <h4>画像</h4>
-  <%#= f.attachment_field :image %>
-  <h4>イベント名</h4>
-  <%= f.text_field :title %>
-  <h4>イベント内容</h4>
-  <%= f.text_area :body %>
-  <%= f.submit '投稿' %>
-  <h4>活動場所選択</h4>
-  <%= f.collection_select :place, JpPrefecture::Prefecture.all, :code, :name, { prompt: '選択してください' }, class: 'form-control' %>
-<% end %>
+<div class="row">
+<div class="col-lg-12">
+<div class="card shadow">
+   <div class="card-body text-center">
+      <h1>イベントを作成する</h1>
+        　<hr class="my-4">
+        <%= form_with model: @event, url: customer_circle_events_path, local:true do |f| %>
+          <h4>画像</h4>
+          <%= f.attachment_field :image, class: "btn btn-secondary" %>
+          <hr class="my-4">
+          <h4>イベント名</h4>
+          <%= f.text_field :title %>
+          <hr class="my-4">
+          <h4>イベント内容</h4>
+          <%= f.text_area :body %>
+          <hr class="my-4">
+          <h4>ジャンル選択</h4>
+          <%= f.collection_select :genre_id, Genre.all, :id, :genre_name, { prompt: "--選択してください--" }, class: "selectpicker" %>
+          <hr class="my-4">
+          <h4>活動場所選択</h4>
+          <%= f.collection_select :place, JpPrefecture::Prefecture.all, :code, :name, { prompt: '選択してください' }, class: "selectpicker" %>
+          <hr class="my-4">
+          <%= f.submit '投稿', class: "btn btn-secondary" %>
+        <% end %>
+</div>
+</div>
+</div>
+
+
+
+
