--- a/app/views/customers/favorite_circles/index.html.erb
+++ b/app/views/customers/favorite_circles/index.html.erb
@@ -1,15 +1,4 @@
 <h1>サークルお気に入り一覧</h1>
-<% @circles.each do |circle| %>
-   <div>
-    <%#= attachment_image_tag post_image, :image %>
-    <p>投稿ユーザー画像：</p>
-    <p>サークル名：<%= link_to circle.circle_name, customer_circle_path(circle.customer_id, circle.id) %></p>
-    <p>説明：<%= circle.explanation %></p>
-    <p>ユーザーネーム：<%= circle.customer.name %></p>
-    <% pref=JpPrefecture::Prefecture.find(circle.place.to_i).name%>
-    <p>活動場所: <%= pref%></p>
-    <h3>--------------------------------------</h3>
-   </div>
-<% end %>
+<%= render 'customers/circles/index', circles: @circles %>
 
 
