--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -3,8 +3,7 @@
 </div>
 
 <div class="row">
-
-  <div class="col-md-12 text-center">
+  <div class="col-md-12 mt-5 text-center">
      <div class="about">
       <h2>ABOUT</h2>
       <p>スポーツを通して人との繋がりを作りたい。</p>
@@ -12,6 +11,7 @@
       <p>そんな人達の悩みを気軽に、簡単に解決するSNSです。</p>
      </div>
   </div>
-
 </div>
+
+<%= render 'genre', genres: @genres %>
 
