--- a/app/views/admins/genres/edit.html.erb
+++ b/app/views/admins/genres/edit.html.erb
@@ -1,10 +1,11 @@
 <h1>ジャンル名編集</h1>
   <div>
     <%= form_with model: @genre, url: admins_genre_path, local: true do |f| %>
+      <%= f.label :画像 %>
+      <%= f.attachment_field :image %>
       <%= f.label :ジャンル %>
       <%= f.text_field :genre_name, class: 'genre_name' %>
       <%= f.submit '変更を保存する', class: 'btn btn-info' %>
     <% end %>
   </div>
   <p><%=link_to "このジャンルを削除する", admins_genre_path, method: :delete %></p>
-   
