--- a/app/views/customers/circles/_form.html.erb
+++ b/app/views/customers/circles/_form.html.erb
@@ -1,5 +1,5 @@
   <hr class="my-4">
-<%= form_with model: circle, url: customer_circle_path, local:true do |f| %>
+<%= form_with model: circle, url: customer_circles_path, local:true do |f| %>
   <h4>画像</h4>
   <%= f.attachment_field :image %>
   <hr class="my-4">
@@ -10,10 +10,10 @@
   <%= f.text_area :explanation %>
   <hr class="my-4">
   <h4>ジャンル選択</h4>
-  <%= f.collection_select :genre_id, Genre.all, :id, :genre_name, { prompt: "--選択してください--" }, class: "selectpicker" %>
+  <%= f.collection_select :genre_id, Genre.all, :id, :genre_name, { prompt: "--選択してください--" } %>
   <hr class="my-4">
   <h4>活動場所選択</h4>
-  <%= f.collection_select :place, JpPrefecture::Prefecture.all, :code, :name, { prompt: '選択してください' }, class: "selectpicker" %>
+  <%= f.collection_select :place, JpPrefecture::Prefecture.all, :code, :name, { prompt: '選択してください' } %>
   <hr class="my-4">
   <%= f.submit '投稿', class: "btn btn-secondary" %>
 <% end %>
