--- a/app/views/customers/circles/new.html.erb
+++ b/app/views/customers/circles/new.html.erb
@@ -3,26 +3,7 @@
 <div class="card shadow">
    <div class="card-body text-center">
       <h1>サークルを作成する</h1>
-           <hr class="my-4">
-         <%= form_with model: @circle, url: customer_circles_path, local:true do |f| %>
-           <h4>画像</h4>
-           <%= f.attachment_field :image %>
-           <hr class="my-4">
-           <h4>サークル名</h4>
-           <%= f.text_field :circle_name %>
-           <hr class="my-4">
-           <h4>説明</h4>
-           <%= f.text_area :explanation %>
-           <hr class="my-4">
-           <h4>ジャンル選択</h4>
-           <%= f.collection_select :genre_id, Genre.all, :id, :genre_name, { prompt: "--選択してください--" }, class: "selectpicker" %>
-           <hr class="my-4">
-           <h4>活動場所選択</h4>
-           <%= f.collection_select :place, JpPrefecture::Prefecture.all, :code, :name, { prompt: '選択してください' }, class: "selectpicker" %>
-           <hr class="my-4">
-           <%= f.submit '投稿', class: "btn btn-secondary" %>
-         <% end %>
-      </div>
+      <%= render 'customers/circles/form', circle: @circle %>
 </div>
 </div>
 </div>
