--- a/app/views/customers/customers/show.html.erb
+++ b/app/views/customers/customers/show.html.erb
@@ -22,13 +22,13 @@
         <%= link_to 'マイページ編集', customer_my_page_edit_path(current_customer.id),remote:true, class: "btn btn-secondary" %>
        </li>
        <li class="nav-item">
-        <%= link_to 'サークルを作る', new_customer_circle_path, class: "btn btn-secondary" %>
+        <%= link_to 'サークルを作る', new_customer_circle_path(current_customer.id), remote:true, class: "btn btn-secondary" %>
        </li>
        <li class="nav-item">
-        <%= link_to 'マイサークル一覧', customer_circles_path, class: "btn btn-secondary" %>
+        <%= link_to 'マイサークル一覧', customer_circles_path, remote:true, class: "btn btn-secondary" %>
        </li>
        <li class="nav-item">
-        <%= link_to 'マイイベント一覧', root_path, class: "btn btn-secondary" %>
+        <%= link_to 'マイイベント一覧', customer_circle_events_path(current_customer.id, @customer.circles), class: "btn btn-secondary" %>
        </li>
        <li class="nav-item">
         <% if customer_signed_in? && @customer.id == current_customer.id %>
