--- a/app/views/customers/events/index.html.erb
+++ b/app/views/customers/events/index.html.erb
@@ -1,5 +1,5 @@
 <h1>マイイベント一覧</h1>
-<%= render 'customers/events/index', events: @myevents %>
+<%= render 'customers/events/index', events: @events %>
 
 
 
