--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer>
   <ul class="footer-menu">
    <li>
-     <%= link_to "HOME", root_path, class: "text-muted" %> ｜
+     <%= link_to "HOME", root_path, class: "text-muted" %>
    </li>
    <li>
 
