--- a/app/views/customers/customers/show.html.erb
+++ b/app/views/customers/customers/show.html.erb
@@ -28,7 +28,7 @@
         <%= link_to 'マイサークル一覧', customer_circles_path, remote:true, class: "btn btn-secondary" %>
        </li>
        <li class="nav-item">
-        <%= link_to 'マイイベント一覧', customer_circle_events_path(current_customer.id, @customer.circles), class: "btn btn-secondary" %>
+        <%= link_to 'マイイベント一覧', customer_circle_events_path(current_customer.id, @customer.circles), remote:true, class: "btn btn-secondary" %>
        </li>
        <li class="nav-item">
         <% if customer_signed_in? && @customer.id == current_customer.id %>
