デプロイ1回目修正

--- a/app/views/customers/circles/show.html.erb
+++ b/app/views/customers/circles/show.html.erb
@@ -26,7 +26,7 @@
               <% end %>
             </p>
           <% end %>
-          <span>Review：</span>
+          <span>このサークルのレビュー：</span>
           <span id ="star-rate-<%= @circle.id %>"></span>
             <script>
               $('#star-rate-<%= @circle.id %>').raty({
