--- a/app/views/customers/reviews/index.html.erb
+++ b/app/views/customers/reviews/index.html.erb
@@ -1,25 +1,34 @@
-<h1>レビュー一覧</h1>
-<!--<p>コメント件数：<#%= @post_image.post_comments.count %></p>-->
-<% @reviews.each do |review| %>
-  <!--<p><#%= image_tag('sample-author1.jpg') %></p>-->
-  <p>投稿者：<%= review.customer.name %></p>
-  <p>表題：<%= review.title %></p>
-  <p>レビュー：<%= review.body %></p>
-  <span>評価：</span>
-  <span id ="star-rate-<%= review.id %>"></span>
-    <script>
-      $('#star-rate-<%= review.id %>').raty({
-        size: 36,
-        starOff: "<%= asset_path('star-off.png') %>",
-        starOn: "<%= asset_path('star-on.png') %>",
-        readOnly: true,
-        score: <%= review.rank %>,
-      });
-    </script>
-  <%= review.rank %>
-  <p><%= review.created_at.strftime('%Y/%m/%d') %></p>
-  <% if review.customer_id === current_customer.id %>
-   <p><%=link_to "このレビューを削除する",  customer_circle_review_path(review.customer_id, review.circle_id ,review.id), method: :delete %></p>
-  <% end %>
-  <h1>---------------------------------------------</h1>
-<% end %>
+<div class="box">
+ <div class="container">
+   <h1>レビュー一覧</h1>
+ 	 <div class="row">
+      <!--<p>コメント件数：<#%= @post_image.post_comments.count %></p>-->
+      <% @reviews.each do |review| %>
+        <!--<p><#%= image_tag('sample-author1.jpg') %></p>-->
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+       　 <div class="box-part text-center">
+            <p>投稿者：<%= review.customer.name %></p>
+            <p>表題：<%= review.title %></p>
+            <p>レビュー：<%= review.body %></p>
+            <span>評価：</span>
+            <span id ="star-rate-<%= review.id %>"></span>
+              <script>
+                $('#star-rate-<%= review.id %>').raty({
+                  size: 36,
+                  starOff: "<%= asset_path('star-off.png') %>",
+                  starOn: "<%= asset_path('star-on.png') %>",
+                  readOnly: true,
+                  score: <%= review.rank %>,
+                });
+              </script>
+            <%= review.rank %>
+            <p><%= review.created_at.strftime('%Y/%m/%d') %></p>
+              <% if review.customer_id === current_customer.id %>
+               <p><%=link_to "このレビューを削除する",  customer_circle_review_path(review.customer_id, review.circle_id ,review.id), method: :delete %></p>
+              <% end %>
+       　 </div>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>  
